--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -26,10 +26,9 @@ body {
 }
 
 .hide-scrollbar {
-  scrollbar-width: none;          /* Firefox */
-  -ms-overflow-style: none;       /* IE/Edge */
+  scrollbar-width: none;          
+  -ms-overflow-style: none;       
 
-  /* Webkit */
 }
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
